# template-cpp-project

./: CMakeLists.txt  README.md  lockfile.json
.github/chunks/: _build.yml
.github/workflows/: _build.yml  _build_macos.yml  _create_release.yml  _parse_version.yml  _update_lockfile.yml  ci.yml  conan_package.yml  create_tag_release.yml  published_release.yml  update_lockfile.yml
.github/workflows/chunks/: _parse_version.yml
src/: CMakeLists.txt
tests/: CMakeLists.txt
